--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -47,7 +47,7 @@
               Short code: <input type="text" class="form-control" id="shortcode-input" short-code="short-code"><br>
               Count: <input type="number" class="form-control" id="count-input" count=0><br>
             </div>
-            <input value="Get sample data" type="button" class="btn btn-primary" click-target="http://localhost:8080/instagram/form/data?" call-type="form-data">
+            <input value="Get sample data" type="button" class="btn btn-primary" click-target="/instagram/form/data?" call-type="form-data">
           </form>
 
         </div>
@@ -141,8 +141,8 @@
         Widget Title
       </div>-->
       <div class="widget-stage">
-        <button class="btn btn-primary etl-btn" type="button"  value="Get user profile" click-target="http://localhost:8080/instagram/profile?" call-type="profile">Get user profile</button>
-        <button class="btn btn-primary etl-btn" type="button"  value="Get recent posts" click-target="http://localhost:8080/instagram/posts?" call-type="recent-posts">Get recent posts</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get user profile" click-target="/instagram/profile?" call-type="profile">Get user profile</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get recent posts" click-target="/instagram/posts?" call-type="recent-posts">Get recent posts</button>
       </div>
      <!-- <div class="widget-notes">
         Notes about this chart
@@ -153,8 +153,8 @@
         Widget Title
       </div>-->
       <div class="widget-stage">
-        <button class="btn btn-primary etl-btn" type="button"  value="Get user all posts" click-target="http://localhost:8080/instagram/allposts?" call-type="all-posts">Get all posts</button>
-        <button class="btn btn-primary etl-btn" type="button"  value="Get all feed" click-target="http://localhost:8080/instagram/allfeed?" call-type="all-feed-posts">Get all feed</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get user all posts" click-target="/instagram/allposts?" call-type="all-posts">Get all posts</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get all feed" click-target="/instagram/allfeed?" call-type="all-feed-posts">Get all feed</button>
       </div>
      <!-- <div class="widget-notes">
         Notes about this chart
@@ -165,8 +165,8 @@
         Widget Title
       </div>-->
       <div class="widget-stage">
-        <button class="btn btn-primary etl-btn" type="button"  value="Get posts by tag" click-target="http://localhost:8080/instagram/tag?" call-type="tag-posts">Get tag posts</button>
-        <button class="btn btn-primary etl-btn" type="button"  value="Get posts by location" click-target="http://localhost:8080/instagram/location?" call-type="location-posts">Get location posts</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get posts by tag" click-target="/instagram/tag?" call-type="tag-posts">Get tag posts</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get posts by location" click-target="/instagram/location?" call-type="location-posts">Get location posts</button>
       </div>
      <!-- <div class="widget-notes">
         Notes about this chart
@@ -177,9 +177,9 @@
         Widget Title
       </div>-->
       <div class="widget-stage">
-        <button class="btn btn-primary etl-btn" type="button"  value="Get user followings" click-target="http://localhost:8080/instagram/following?" call-type="user-following">Get followings</button>
-        <button class="btn btn-primary etl-btn" type="button"  value="Get user followers" click-target="http://localhost:8080/instagram/followers?" call-type="user-followers">Get followers</button>
-        <button class="btn btn-primary etl-btn" type="button"  value="Get feed" click-target="http://localhost:8080/instagram/feed?" call-type="feed-posts">Get feed</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get user followings" click-target="/instagram/following?" call-type="user-following">Get followings</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get user followers" click-target="/instagram/followers?" call-type="user-followers">Get followers</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get feed" click-target="/instagram/feed?" call-type="feed-posts">Get feed</button>
       </div>
      <!-- <div class="widget-notes">
         Notes about this chart
@@ -190,9 +190,9 @@
         Widget Title
       </div>-->
       <div class="widget-stage">
-        <button class="btn btn-primary etl-btn" type="button"  value="Get search items" click-target="http://localhost:8080/instagram/search?" call-type="search-posts">Get search posts</button>
-        <button class="btn btn-primary etl-btn" type="button"  value="Get suggested posts" click-target="http://localhost:8080/instagram/suggested/posts?" call-type="sugg-posts">Get sugg posts</button>
-        <button class="btn btn-primary etl-btn" type="button"  value="Get suggested people" click-target="http://localhost:8080/instagram/suggested/people?"  call-type="sugg-people">Get sugg people</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get search items" click-target="/instagram/search?" call-type="search-posts">Get search posts</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get suggested posts" click-target="/instagram/suggested/posts?" call-type="sugg-posts">Get sugg posts</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get suggested people" click-target="/instagram/suggested/people?"  call-type="sugg-people">Get sugg people</button>
 
 
 
@@ -206,9 +206,9 @@
         Widget Title
       </div>-->
       <div class="widget-stage">
-        <button class="btn btn-primary etl-btn" type="button"  value="Get post media" click-target="http://localhost:8080/instagram/post?" call-type="post-json">Get post media</button>
-        <button class="btn btn-primary etl-btn" type="button"  value="Get post likes" click-target="http://localhost:8080/instagram/likes?" call-type="post-likes">Get likes</button>
-        <button class="btn btn-primary etl-btn" type="button"  value="Get post comments" click-target="http://localhost:8080/instagram/comments?" call-type="post-comments">Get comments</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get post media" click-target="/instagram/post?" call-type="post-json">Get post media</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get post likes" click-target="/instagram/likes?" call-type="post-likes">Get likes</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get post comments" click-target="/instagram/comments?" call-type="post-comments">Get comments</button>
       </div>
      <!-- <div class="widget-notes">
         Notes about this chart
