--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -6,7 +6,7 @@
 <body>
 
 <div id="alert-container" style="position:absolute;top:100px;right:0"></div>
-<div class="container">
+<div class="container" id="stats-container" >
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <img class="github" id="github" alt="Houman Hadian's project research tool on Github" src="/img/svg/github-corner-right.svg">
     <div class="navbar-header">
@@ -179,6 +179,12 @@
   </div>
 </div>
 <%- include ../layouts/layout-footer.ejs %>
+<script>
+  $("#stats-container").ready(getServiceData('find', 'instagram/posts',{$search: 'BwE-N5mFizR',$fields:['shortcode'],$deep:false }, undefined, { createdAt: -1}).then(data=>{
+    console.log('Data: ' + JSON.stringify(data) );
+    window.alert('Data: ' +JSON.stringify(data))
+  }));
+</script>
 </body>
 </html>
 
