- Making session-id configurable via login and not only config files.

--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="col-12 col-6-tablet push-3-tablet text-center heading">
         <h1 class="font-100">Instagram account:</h1>
-        <h6 style="color:darkred; font-size:10px" class="font-100">Please remember to set session_id in config index file </br> before using account only login,</br> otherwise use instagram login on the left</h6>
+        <h6 style="color:darkred; font-size:10px" class="font-100">Get Instagram session-id cookie from instagram page in your browser!</h6>
       </div>
     </div>
     <div class="row">
@@ -27,6 +27,7 @@
           <input type="hidden" name="strategy" value="local">
           <fieldset>
             <input style="cursor:pointer;" class="block" type="username" name="username" placeholder="username" autocomplete="username">
+            <input class="block form-control" type="password" name="sessionid" placeholder="sessionid">
           </fieldset>
 <!--
           <fieldset>
