--- a/src/views/pages/dashboards-explore.ejs
+++ b/src/views/pages/dashboards-explore.ejs
@@ -11,7 +11,7 @@
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <img class="github" id="github" alt="Houman Hadian's project research tool on Github" src="/img/svg/github-corner-right.svg">
     <div class="navbar-header">
-      <button class="instabtn" onclick="openNav('social-sidepanel')">&#9776;</button>
+      <button class="instabtn" onclick="openNav('dashboard-sidepanel')">&#9776;</button>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -137,6 +137,7 @@
     </div>
   </div>
 </div>
+<%- include ../pages/sidepanel-dashboards.ejs %>
 <%- include ../layouts/layout-footer.ejs %>
 </body>
 </html>
