--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -10,7 +10,7 @@
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <img class="github" id="github" alt="Houman Hadian's project research tool on Github" src="/img/svg/github-corner-right.svg">
     <div class="navbar-header">
-      <button class="instabtn" onclick="openNav('social-sidepanel')">&#9776;</button>
+      <button class="instabtn" onclick="openNav('dashboard-sidepanel')">&#9776;</button>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -178,6 +178,7 @@
     </div>
   </div>
 </div>
+<%- include ../pages/sidepanel-dashboards.ejs %>
 <%- include ../layouts/layout-footer.ejs %>
 <script>
   $("#stats-container").ready(getServiceData('find', 'instagram/posts',{$search: 'BwE-N5mFizR',$fields:['shortcode'],$deep:false }, undefined, { createdAt: -1}).then(data=>{
