--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -84,34 +84,34 @@
               <!-- The slideshow -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide1.jpg" alt="Slide #1">
+                  <img style="max-width:100%;max-height:450px" src="img/ppt/Slide1.jpg" alt="Slide #1">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide2.jpg" alt="Slide #2">
+                  <img style="max-width:100%;max-height:450px" src="img/ppt/Slide2.jpg" alt="Slide #2">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide3.jpg" alt="Slide #3">
+                  <img style="max-width:100%;max-height:450px" src="img/ppt/Slide3.jpg" alt="Slide #3">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide4.jpg" alt="Slide #4">
+                  <img style="max-width:100%;max-height:450px" src="img/ppt/Slide4.jpg" alt="Slide #4">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide5.jpg" alt="Slide #5">
+                  <img style="max-width:100%;max-height:450px" src="img/ppt/Slide5.jpg" alt="Slide #5">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide6.jpg" alt="Slide #6">
+                  <img style="max-width:100%;max-height:450px" src="img/ppt/Slide6.jpg" alt="Slide #6">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide7.jpg" alt="Slide #7">
+                  <img style="max-width:100%;max-height:450px" src="img/ppt/Slide7.jpg" alt="Slide #7">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide8.jpg" alt="Slide #8">
+                  <img style="max-width:100%;max-height:450px" src="img/ppt/Slide8.jpg" alt="Slide #8">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide9.jpg" alt="Slide #9">
+                  <img style="max-width:100%;max-height:450px" src="img/ppt/Slide9.jpg" alt="Slide #9">
                 </div>
                 <div class="carousel-item">
-                  <img style="max-width:100%;max-height:450px" src="/img/ppt/Slide10.jpg" alt="Slide #10">
+                  <img style="max-width:100%;max-height:450px" src="img/ppt/Slide10.jpg" alt="Slide #10">
                 </div>
               </div>
 
