- Minor style changes (get sample button margin-bottom increased to 25px) - Routes now check for sessionid and csrftoken & if not present re route to login

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -47,7 +47,7 @@
               Short code: <input type="text" class="form-control" id="shortcode-input" short-code="short-code"><br>
               Count: <input type="number" class="form-control" id="count-input" count=0><br>
             </div>
-            <input value="Get sample data" type="button" class="btn btn-primary" click-target="/instagram/form/data?" call-type="form-data">
+            <input style="margin-bottom:25px;" value="Get sample data" type="button" class="btn btn-primary" click-target="/instagram/form/data?" call-type="form-data">
           </form>
 
         </div>
