--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,6 +172,7 @@ a:focus {
 .data-form {
   /* width: 180px; */
   /* height: 9%; */
+  margin-top: 50px;
   display: grid;
   margin-right: 5px;
 }
