--- a/src/views/layouts/layouts-javascripts-head.ejs
+++ b/src/views/layouts/layouts-javascripts-head.ejs
@@ -2,6 +2,6 @@
 <script type="text/javascript" src="/js/popper.min.js"></script>
 <script type="text/javascript" src="/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/OverlayScrollbars.min.js"></script>
-
+<script type="text/javascript" src="/js/echarts.min.js"></script>
 
 
