--- a/src/views/layouts/layouts-javascripts.ejs
+++ b/src/views/layouts/layouts-javascripts.ejs
@@ -9,5 +9,6 @@
 <script src="/js/globals.js"></script>
 <script src="/js/server-notification-client.js"></script>
 <script src="/js/server-data-client.js"></script>
+<script src="/js/render-client.js"></script>
 <script src="/js/client.js"></script>
 
