--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -182,7 +182,7 @@
 <%- include ../layouts/layout-footer.ejs %>
 <script type="text/javascript" src="/js/stats-client.js"> </script>
 <script>
-  getEndpoint('/instagram/sets/data?', 'form-data', '', 'main', undefined);
+  getEndpointData('/instagram/sets/data?', 'form-data', '', 'main', undefined);
   $("#noDataMsg").remove();
 </script>
 </body>
