--- a/src/views/pages/feed.ejs
+++ b/src/views/pages/feed.ejs
@@ -6,7 +6,7 @@
         <div class="card" style="height:300px; min-height:300px;font-size:12px;overflow-y: hidden;">
           <div class="card-body">
             <div style="cursor:pointer"
-                 onClick=getEndpoint("/instagram/post?","post-json",<%= '"' + edge.shortcode + '"' %>,"post")>
+                 onClick=getEndpointData("/instagram/post?","post-json",<%= '"' + edge.shortcode + '"' %>,"post")>
               <img class="img-fluid" src="<%= edge.display_url %>"
                    alt="<%= edge.edge_media_to_caption ? edge.edge_media_to_caption.edges[0] : [] %>">
             </div>
@@ -17,7 +17,7 @@
             <% }else if(edge.edge_liked_by){ %><%= edge.edge_liked_by? edge.edge_liked_by.count : '-&#45;&#45;' + ' ' %> &hearts; <% } %>
           </p>-->
             <div class="likes-comments">
-              <span style="cursor:pointer; color: rgb(249,5,5);" onClick=getEndpoint("/instagram/likes?","post-likes","<%= edge.shortcode %>","post-likes")>
+              <span style="cursor:pointer; color: rgb(249,5,5);" onClick=getEndpointData("/instagram/likes?","post-likes","<%= edge.shortcode %>","post-likes")>
                 <% if(edge.edge_media_preview_like){ %>
                   <% if(edge.edge_media_preview_like.count) { %><%= edge.edge_media_preview_like.count+' ' %>
                   &hearts; <% } %>
@@ -25,7 +25,7 @@
                   <%= edge.edge_liked_by.count+' ' %> &hearts;
                 <% } %>
               </span>
-              <span style="cursor:pointer; color: transparent;  text-shadow: 0 0 0 rgb(42, 170, 82);" onClick=getEndpoint("/instagram/comments?","post-comments","<%= edge.shortcode %>","post-comments")>
+              <span style="cursor:pointer; color: transparent;  text-shadow: 0 0 0 rgb(42, 170, 82);" onClick=getEndpointData("/instagram/comments?","post-comments","<%= edge.shortcode %>","post-comments")>
                 <% if(edge.edge_media_to_comment){ %>
                   <%= edge.edge_media_to_comment.count+' ' %> &#x1F5E8;
                 <% } %>
