- Massive architecture improvements and many changes on modules structures - Implemented authentication via local and jwt strategies - Implemented full authentication on client via localstorage not cookies - Implemented registration page and route

--- a/src/views/layouts/layouts-javascripts-head.ejs
+++ b/src/views/layouts/layouts-javascripts-head.ejs
@@ -1,4 +1,5 @@
 <script type="text/javascript" src="/js/jquery.min.js"></script>
+<script type="text/javascript" src="/js/jquery.form.min.js"></script>
 <script type="text/javascript" src="/js/popper.min.js"></script>
 <script type="text/javascript" src="/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/OverlayScrollbars.min.js"></script>
