--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -4,7 +4,7 @@
   <%- include ../layouts/layout-header.ejs %>
 </head>
 <body>
-
+<div style="display:none" id="secret" username="<%=username%>" token="<%=accesstoken%>"></div>
 <div id="alert-container" style="position:absolute;top:100px;right:0"></div>
 <div class="container" id="stats-container" >
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -17,7 +17,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="../">
+      <a class="navbar-brand" href="">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
              viewBox="76.39 132.243 15.35 22" width="20" height="20" fill="#777">
           <defs>
@@ -32,9 +32,9 @@
     </div>
     <div class="navbar-collapse">
       <ul class="navbar-nav nav main-nav">
-        <li><a href="/home">Home</a></li>
-        <li><a href="/dashboards/explore">Data explore</a></li>
-        <li><a href="/dashboards/engagement">Engagement dashboard</a>
+        <li><a id="home-link" href="/home?username=<%=username%>">Home</a></li>
+        <li><a href="/dashboards/explore?username=<%=username%>">Data explore</a></li>
+        <li><a href="/dashboards/engagement?username=<%=username%>">Engagement dashboard</a>
         </li>
       </ul>
     </div>
