--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -1,4 +1,5 @@
 <div class="main-container">
+  <div style="display:none" id="secret" username="<%=username%>" token="<%=accesstoken%>"></div>
   <div id="alert-container" style="position:absolute;top:100px;right:0"></div>
   <div class="container">
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -26,9 +27,9 @@
       </div>
       <div class="navbar-collapse">
         <ul class="navbar-nav nav main-nav">
-          <li><a href="/dashboards/stats">Stats dashboard</a></li>
-          <li><a href="/dashboards/explore">Data explore</a></li>
-          <li><a href="/dashboards/engagement">Engagement dashboard</a>
+          <li><a href="/dashboards/stats?username=<%=username%>">Stats dashboard</a></li>
+          <li><a href="/dashboards/explore?username=<%=username%>">Data explore</a></li>
+          <li><a href="/dashboards/engagement?username=<%=username%>>">Engagement dashboard</a>
           </li>
         </ul>
       </div>
