--- a/src/views/pages/posts.ejs
+++ b/src/views/pages/posts.ejs
@@ -26,7 +26,7 @@
 
           </div>
           <% if (edge.owner){%>
-            <% if(edge.owner.id==userid) { %>
+            <% if(edge.owner.id==username) { %>
             <% } %>
           <%}%>
         </div>
