- Removed two extra login boxes : sessionid and Instagram username (they are red from user profile now and to update the it has to be done there) - Changed the 12 limit for loop data to 50 to make it go faster

--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -28,8 +28,8 @@
           <fieldset>
             <input style="cursor:pointer;" class="block" type="email" name="email" placeholder="email" autocomplete="email">
             <input class="block form-control" type="password" name="password" placeholder="password">
-            <input style="cursor:pointer;" class="block" type="username" name="username" placeholder="instagram username" autocomplete="username">
-            <input class="block form-control" type="password" name="sessionid" placeholder="instagram sessionid">
+<!--            <input style="cursor:pointer;" class="block" type="username" name="username" placeholder="instagram username" autocomplete="username">
+            <input class="block form-control" type="password" name="sessionid" placeholder="instagram sessionid">-->
           </fieldset>
           <button style="cursor:pointer;" type="submit" id="login" class="button button-primary block signup">
             Use this Instagram account
