--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="/css/app.css">
   <%- include ../layouts/layouts-javascripts-head.ejs %>
 </head>
-<body>
+<body style="background: aliceblue">
 <!--<button class="twitrbtn" onclick="openNav()">&#9776; tw</button>-->
 <div id="app" class="flex flex-column">
-  <main class="registeration container">
+  <main style="background-color: #dbe7f3; border-radius: 50%;" class="login container">
     <div class="row">
       <div class="col-12 col-6-tablet push-3-tablet text-center heading">
         <h1 class="font-100">Instagram account:</h1>
