--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -50,14 +50,16 @@
             </div>
             <input style="margin-bottom:25px;" value="Get sample data" type="button" class="btn btn-primary" click-target="/instagram/form/data?" call-type="form-data">
           </form>
-
+          <div style=" text-align:center" class="footer">
+            <p class="small text-muted">Built with &#9829; for <a href="houmanhadian.github.io">Houman Hadian's doctoral project @ UAlg</a></p>
+          </div>
         </div>
         <!--<div class="widget-notes">
           Notes about this chart
         </div>-->
       </div>
     </div>
-    <div class="hero">
+    <div style="" class="hero">
       <div class="widget-wrapper">
       <!--  <div class="widget-title">
           Widget Title
@@ -71,64 +73,59 @@
         </div>-->
       </div>
     </div>
-
-
-
-
-
     <div class="widget-wrapper">
-     <!-- <div class="widget-title">
-        Widget Title
-      </div>-->
+      <!-- <div class="widget-title">
+         Widget Title
+       </div>-->
       <div class="widget-stage">
         <button class="btn btn-primary etl-btn" type="button"  value="Get user profile" click-target="/instagram/profile?" call-type="profile">Get user profile</button>
         <button class="btn btn-primary etl-btn" type="button"  value="Get recent posts" click-target="/instagram/posts?" call-type="recent-posts">Get recent posts</button>
       </div>
-     <!-- <div class="widget-notes">
-        Notes about this chart
-      </div>-->
+      <!-- <div class="widget-notes">
+         Notes about this chart
+       </div>-->
     </div>
     <div class="widget-wrapper">
-     <!-- <div class="widget-title">
-        Widget Title
-      </div>-->
+      <!-- <div class="widget-title">
+         Widget Title
+       </div>-->
       <div class="widget-stage">
         <button class="btn btn-primary etl-btn" type="button"  value="Get user all posts" click-target="/instagram/allposts?" call-type="all-posts">Get all posts</button>
         <button class="btn btn-primary etl-btn" type="button"  value="Get all feed" click-target="/instagram/allfeed?" call-type="all-feed-posts">Get all feed</button>
       </div>
-     <!-- <div class="widget-notes">
-        Notes about this chart
-      </div>-->
+      <!-- <div class="widget-notes">
+         Notes about this chart
+       </div>-->
     </div>
     <div class="widget-wrapper">
-     <!-- <div class="widget-title">
-        Widget Title
-      </div>-->
+      <!-- <div class="widget-title">
+         Widget Title
+       </div>-->
       <div class="widget-stage">
         <button class="btn btn-primary etl-btn" type="button"  value="Get posts by tag" click-target="/instagram/tag?" call-type="tag-posts">Get tag posts</button>
         <button class="btn btn-primary etl-btn" type="button"  value="Get posts by location" click-target="/instagram/location?" call-type="location-posts">Get location posts</button>
       </div>
-     <!-- <div class="widget-notes">
-        Notes about this chart
-      </div>-->
+      <!-- <div class="widget-notes">
+         Notes about this chart
+       </div>-->
     </div>
     <div class="widget-wrapper">
-     <!-- <div class="widget-title">
-        Widget Title
-      </div>-->
+      <!-- <div class="widget-title">
+         Widget Title
+       </div>-->
       <div class="widget-stage">
         <button class="btn btn-primary etl-btn" type="button"  value="Get user followings" click-target="/instagram/following?" call-type="user-following">Get followings</button>
         <button class="btn btn-primary etl-btn" type="button"  value="Get user followers" click-target="/instagram/followers?" call-type="user-followers">Get followers</button>
         <button class="btn btn-primary etl-btn" type="button"  value="Get feed" click-target="/instagram/feed?" call-type="feed-posts">Get feed</button>
       </div>
-     <!-- <div class="widget-notes">
-        Notes about this chart
-      </div>-->
+      <!-- <div class="widget-notes">
+         Notes about this chart
+       </div>-->
     </div>
     <div class="widget-wrapper">
-     <!-- <div class="widget-title">
-        Widget Title
-      </div>-->
+      <!-- <div class="widget-title">
+         Widget Title
+       </div>-->
       <div class="widget-stage">
         <button class="btn btn-primary etl-btn" type="button"  value="Get search items" click-target="/instagram/search?" call-type="search-posts">Get search posts</button>
         <button class="btn btn-primary etl-btn" type="button"  value="Get suggested posts" click-target="/instagram/suggested/posts?" call-type="sugg-posts">Get sugg posts</button>
@@ -137,29 +134,27 @@
 
 
       </div>
-     <!-- <div class="widget-notes">
-        Notes about this chart
-      </div>-->
+      <!-- <div class="widget-notes">
+         Notes about this chart
+       </div>-->
     </div>
     <div class="widget-wrapper">
-     <!-- <div class="widget-title">
-        Widget Title
-      </div>-->
+      <!-- <div class="widget-title">
+         Widget Title
+       </div>-->
       <div class="widget-stage">
         <button class="btn btn-primary etl-btn" type="button"  value="Get post media" click-target="/instagram/post?" call-type="post-json">Get post media</button>
         <button class="btn btn-primary etl-btn" type="button"  value="Get post likes" click-target="/instagram/likes?" call-type="post-likes">Get likes</button>
         <button class="btn btn-primary etl-btn" type="button"  value="Get post comments" click-target="/instagram/comments?" call-type="post-comments">Get comments</button>
       </div>
-     <!-- <div class="widget-notes">
-        Notes about this chart
-      </div>-->
+      <!-- <div class="widget-notes">
+         Notes about this chart
+       </div>-->
     </div>
 
   </div>
 
-  <div style="margin-top:50px; text-align:center" class="container">
-    <p class="small text-muted">Built with &#9829; for <a href="houmanhadian.github.io">Houman Hadian's doctoral project @ UAlg</a></p>
-  </div>
+
 
 
 
