--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -14,7 +14,7 @@
 <!--<button class="instabtn" onclick="openNav('sidepanel-login')">&#9776; Instagram </button>-->
 <!--<button class="twitrbtn" onclick="openNav()">&#9776; tw</button>-->
 <div id="app" class="flex flex-column">
-  <main style="background-color: #dbe7f3; border-radius: 50%;" class="login container">
+  <main style="background-color: #dbe7f3; border-radius: 100px;" class="login container">
     <div class="row">
       <div class="col-12 col-6-tablet push-3-tablet text-center heading">
         <h1 class="font-100">Instagram account:</h1>
